# Educational-Vector-Database

./: .gitignore  README.md  requirements.txt  setup.cfg
.github/workflows/: tests.yml
examples/: basic_text_search.py
src/: server.py
src/vectordb/: __init__.py  ann.py  api.py  embeddings.py  index.py  rag.py  storage.py
tests/: test_basic.py  test_v2_features.py  test_v3_features.py
