[metadata]
name = edu-vector-db
version = 0.1.0
author = Ahmad Hattab
description = An educational vector database built from scratch for learning purposes
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    numpy

[options.packages.find]
where = src
